--- a/inflearn_lecture/pubspec.yaml
+++ b/inflearn_lecture/pubspec.yaml
@@ -18,12 +18,18 @@ dependencies:
   go_router: ^4.3.0
   flutter_riverpod: ^2.0.0-dev.9
   flutter_secure_storage: ^6.0.0
+  json_annotation: ^4.6.0
+  retrofit: ^3.0.1+1
+  logger: ^1.1.0
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
+  build_runner: ^2.2.0
+  json_serializable: ^6.3.1
+  retrofit_generator: ^4.0.3+1
 
 
 flutter:
