--- a/inflearn_lecture/analysis_options.yaml
+++ b/inflearn_lecture/analysis_options.yaml
@@ -12,9 +12,11 @@ include: package:flutter_lints/flutter.yaml
 analyzer:
   errors:
     unused_element: ignore
+   
 
 linter:
   rules:
+    depend_on_referenced_packages: false
     unused_element: false
     avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
